--- a/Lesson_cups/css/style.css
+++ b/Lesson_cups/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
-	font-family:"Miso";
-	src:url("../font/miso/miso.eot?") format("eot"),url("../font/miso/miso.woff") format("woff"),url("../font/miso/miso.ttf") format("truetype"),url("../font/miso/miso.svg#Miso") format("svg");
+	font-family:"Miso-font";
+	src:url("../font/Miso/miso.eot?") format("eot"),url("../font/Miso/miso.woff") format("woff"),url("../font/Miso/miso.ttf") format("truetype"),url("../font/Miso/miso.svg#Miso") format("svg");
 	font-weight:normal;
 	font-style:normal;
 }
@@ -18,7 +18,7 @@ html, body {
 
 body {
 	font-size: 14px;
-	font-family: "Miso", sans-serif;
+	font-family: "Miso-font", sans-serif;
 	color: #333333;
 	display: flex;
 	justify-content: center;
