--- a/Lesson_cups/css/style.css
+++ b/Lesson_cups/css/style.css
@@ -1,8 +1,6 @@
 @font-face {
-	font-family:"Miso-font";
-	src:url("../font/Miso/miso.eot?") format("eot"),url("../font/Miso/miso.woff") format("woff"),url("../font/Miso/miso.ttf") format("truetype"),url("../font/Miso/miso.svg#Miso") format("svg");
-	font-weight:normal;
-	font-style:normal;
+	font-family: "Miso";
+	src: url("../fonts/miso.otf");
 }
 
 * {
@@ -18,7 +16,7 @@ html, body {
 
 body {
 	font-size: 14px;
-	font-family: "Miso-font", sans-serif;
+	font-family: "Miso", sans-serif;
 	color: #333333;
 	display: flex;
 	justify-content: center;
