--- a/Lesson_nikedark/css/style.css
+++ b/Lesson_nikedark/css/style.css
@@ -42,8 +42,10 @@ clear: both;
 
 
 .main {
-	width: 685px;
-	height: 390px;
+	width: 100%;
+	max-width: 685px;
+	max-height: 390px;
+	height: 100%;
 	background-color: #111a28; 
 	border-radius: 10px;
 	margin: auto;	
@@ -70,12 +72,17 @@ clear: both;
 .foto {
 	position: relative;
 	margin: auto;
-	width: 340px;
-	height: 250px;
+	width: 90%;
+	padding-bottom: 67%;
+    position: relative;
+	height: 0;
+
 }
+
 
 .foto img {
 	position: absolute;
+	width: 100%;
 	max-height: 250px;
 	max-width: 340px;
 	left: 0;
@@ -83,6 +90,7 @@ clear: both;
   	top: 0;
  	right: 0;
  	margin: auto;
+ 	object-fit: cover;
 }
 
 /* #BULLET */
@@ -147,6 +155,10 @@ ul.bullet__list {
 	font-size: 24px;
 	letter-spacing: 0px;
 	line-height: 26px;
+	margin: 0;
+}
+
+.description__heading {
 	margin: 0 0 10px;
 }
 
@@ -164,18 +176,58 @@ ul.bullet__list {
 	margin-bottom: 20px;
 }
 
-.order__list {
-	background-color: #111a28; 
-	font-size: 14px;
-	letter-spacing: 0px;
-	line-height: 18px;
-	width: 70px;
-	height: 33px;	
-	color: #454c56;
-	margin-bottom: 28px; 
-	padding-left: 5px;
-	border-color: #4f5560; 
+
+.options *{
+	color: #adafb3;
 }
+
+.options-selects {
+	margin-bottom: 30px;
+}
+
+.options__label {
+	display: inline-block;
+	position: relative;
+	width: 70px;
+}
+
+.options__label::after {
+	content: "";
+	display: block;
+	width: 5px;
+	height: 5px;
+	border: 1px solid transparent;
+	border-left-color: #575d66;
+	border-bottom-color: #575d66;
+	position: absolute;
+	z-index: 0;
+	top: 36%;
+	right: 15px;
+	transform: rotate(-45deg);
+	cursor: pointer;
+}
+
+.options__label--open::after {
+	transform: rotate(135deg);
+	top: 45%;
+}
+
+
+.options__select {color: #454c56;
+	background: none;
+	border: 1px solid #575d66;
+	text-transform: capitalize;
+	padding: 10px;
+	width: 100%;
+	position: relative;
+	z-index: 1;
+	cursor: pointer;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+	-ms-appearance: none;
+	appearance: none;
+}
+
 
 
 .order__submit {
