cahee_section1_flex_end

--- a/Cahee/src/scss/_page.scss
+++ b/Cahee/src/scss/_page.scss
@@ -2,13 +2,11 @@
 	padding: 0;
 	margin: 0;
 	box-sizing: border-box;
-
 }
 
 html, body {
 	width: 100%;
 	min-height: 100vh;
-	line-height: 1;
 }
 
 body {
@@ -70,44 +68,63 @@ body {
 	background-color: #f9f8fb;
 	background: transparent url($img_path + "screen1.png") no-repeat;	
 	background-size: cover;	
-	background-position: 50% 55%;
 	position: relative;
+	background-position: 50% 40%;
 
-	&__content  {
-		h1 {
+	&__row {
+		height: 100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+
+
+	} 
+
+
+
+	&__content {
+		
+
+
+		& h1 {
 		font-size: $heading_size_h2;
 		font-weight: 900;
 		text-transform: capitalize;
 		margin: 0;
-
-	}
+		letter-spacing: 1.2;
+		margin-bottom: 15px;
+		}
 
 		& p {
 		font-size: $text_md;
-		line-height: 1.5;
-		margin-bottom: 25px;
-	}
+		line-height: 1.6;
+		margin-bottom: 27px;
+		}
 
 		& button {
 		@include button(#ff6033);
-			
-    	}	
-	}
-	
-	&__container {
-		height: 100vh;
-		display: flex;
-		flex-direction: column;
-		justify-content: space-between;
-		padding-top: 15%;
-		padding-bottom: 3%;
+		}
 	}
 
+	&__container {
+		height: 100vh;
+	}
+	
+	& .col-12 {		
+		position: absolute;
+		bottom: 50px;
+	}
+
+
 	&__scroll-link {
+		min-height: 55px;
 		display: block;
 		text-align: center;
 	}
 }
+
+
+
 
 
 .section_2 {
