--- a/Cahee/app/css/style.css
+++ b/Cahee/app/css/style.css
@@ -62,8 +62,7 @@
 
 html, body {
   width: 100%;
-  min-height: 100vh;
-  line-height: 1; }
+  min-height: 100vh; }
 
 body {
   font-size: 17px;
@@ -129,22 +128,36 @@ body {
   background-color: #f9f8fb;
   background: transparent url("../img/screen1.png") no-repeat;
   background-size: cover;
-  background-position: 50% 55%;
-  position: relative; }
+  position: relative;
+  background-position: 50% 40%; }
+  .main-screen__row {
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
   .main-screen__content h1 {
     font-size: 60px;
     font-weight: 900;
     text-transform: capitalize;
-    margin: 0; }
+    margin: 0;
+    letter-spacing: 1.2;
+    margin-bottom: 15px; }
   .main-screen__content p {
     font-size: 17px;
-    line-height: 1.5;
-    margin-bottom: 25px; }
+    line-height: 1.6;
+    margin-bottom: 27px; }
   .main-screen__content button {
     width: 100%;
     max-width: 200px;
     min-height: 55px;
-    padding: 20px 0;
+    padding: 15px 0;
     border: none;
     -webkit-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
@@ -156,20 +169,12 @@ body {
     .main-screen__content button:hover {
       background-color: #ff8866; }
   .main-screen__container {
-    height: 100vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: justify;
-    -ms-flex-pack: justify;
-    justify-content: space-between;
-    padding-top: 15%;
-    padding-bottom: 3%; }
+    height: 100vh; }
+  .main-screen .col-12 {
+    position: absolute;
+    bottom: 50px; }
   .main-screen__scroll-link {
+    min-height: 55px;
     display: block;
     text-align: center; }
 
@@ -303,7 +308,7 @@ body {
     width: 100%;
     max-width: 200px;
     min-height: 55px;
-    padding: 20px 0;
+    padding: 15px 0;
     border: none;
     -webkit-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
