cahee_subscribe_add

--- a/Cahee/app/css/style.css
+++ b/Cahee/app/css/style.css
@@ -340,3 +340,64 @@ body {
     font-size: 0;
     padding-top: 72.8%;
     position: relative; }
+
+.section_5 {
+  background-image: url("../img/screen_5.png");
+  background-repeat: no-repeat; }
+
+.subscribe {
+  min-height: 500px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+  .subscribe__heading > * {
+    font-size: 40px;
+    line-height: 27px;
+    color: #262626;
+    font-weight: bold;
+    text-transform: capitalize;
+    margin-bottom: 30px; }
+  .subscribe__form {
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between; }
+  .subscribe__text > * {
+    font-size: 17px;
+    margin-bottom: 31px;
+    height: 50px;
+    line-height: 27px;
+    font-weight: 300; }
+  .subscribe__text-input {
+    min-width: calc(100% - 200px);
+    border: 1px solid #262626;
+    padding-left: 15px;
+    font-size: 15px;
+    font-weight: 300;
+    margin-right: 30px; }
+  .subscribe button {
+    width: 100%;
+    max-width: 200px;
+    min-height: 55px;
+    padding: 15px 0;
+    border: none;
+    -webkit-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
+    background-color: #96b92c;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px;
+    cursor: pointer; }
+    .subscribe button:hover {
+      background-color: #b0d345; }
