--- a/Cahee/src/scss/_page.scss
+++ b/Cahee/src/scss/_page.scss
@@ -76,16 +76,9 @@ body {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
-
-
 	} 
 
-
-
 	&__content {
-		
-
-
 		& h1 {
 		font-size: $heading_size_h2;
 		font-weight: 900;
@@ -122,8 +115,6 @@ body {
 		text-align: center;
 	}
 }
-
-
 
 
 
@@ -325,5 +316,61 @@ body {
 		padding-top: 72.8%;
 		position: relative;
 	}	
+}
+
+.section_5 {
+	
+	background-image: url("../img/screen_5.png");
+ 	background-repeat: no-repeat;
+}
+
+
+.subscribe {
+	min-height: 500px;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+
+
+	&__heading > * {
+		font-size: $heading_size_h3;
+		line-height: 27px;
+		color: $dark-color;
+		font-weight: bold;
+		text-transform: capitalize;
+		margin-bottom: 30px;
+	}
+
+	&__form {
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+	}
+
+	&__text > * { 
+		font-size: $text_md;
+		margin-bottom: 31px;
+		height: 50px;
+		line-height: 27px;
+		font-weight: 300;
+	 }
+
+	&__text-input {
+		min-width: calc(100% - 200px);
+		border: 1px solid $dark-color;
+		padding-left: 15px;
+		font-size: 15px;
+		font-weight: 300;
+		margin-right: 30px;
+	}
+
+
+	& button {
+		@include button(#96b92c);	
+
+		}
+
+
 }
 
