--- a/Cahee/app/css/style.css
+++ b/Cahee/app/css/style.css
@@ -179,31 +179,36 @@ body {
     text-align: center; }
 
 .section_2 {
-  padding: 5% 0; }
+  min-height: 700px;
+  background-image: url("../img/screen_2.png");
+  background-repeat: no-repeat;
+  background-position: 19% 50%; }
 
-.about-us__content {
-  padding-left: 85px;
-  padding-top: 9%;
-  color: #fff; }
-  .about-us__content h1 {
-    font-size: 90px;
-    margin: 0 0 10px; }
-  .about-us__content p {
-    font-size: 17px;
-    line-height: 1.5; }
-    .about-us__content p:not(:last-child) {
-      margin-bottom: 10px; }
-
-.about-us__img {
-  height: 100%;
-  font-size: 0; }
+.about-us {
+  padding-top: 9.5em;
+  height: 100%; }
+  .about-us__content {
+    color: #fff;
+    padding-left: 5em; }
+    .about-us__content h1 {
+      font-size: 90px;
+      margin: 0 0 10px; }
+    .about-us__content p {
+      font-size: 17px;
+      line-height: 27px; }
+      .about-us__content p:not(:last-child) {
+        margin-bottom: 10px; }
+  .about-us__img {
+    width: 50%;
+    height: 10px;
+    font-size: 0; }
 
 .section_3 {
   min-height: 790px;
-  padding: 180px 0 150px;
+  padding-top: 5.5em;
   background-image: url("../img/screen_3.png");
   background-repeat: no-repeat;
-  background-position: 80% 50%; }
+  background-position: 81% 37%; }
 
 .our_services {
   display: -webkit-box;
@@ -220,11 +225,15 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center; }
-  .our_services__title h1 {
-    font-size: 90px;
-    color: #fff;
-    margin: 0;
+  .our_services__title {
     text-align: right; }
+    .our_services__title h1 {
+      font-size: 90px;
+      color: #fff;
+      margin: 0;
+      text-align: right; }
+  .our_services__links {
+    padding-top: 5em; }
   .our_services__link {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -253,7 +262,7 @@ body {
       top: 0;
       right: -100px;
       background-color: #ffffff;
-      z-index: 10;
+      z-index: 2;
       background-repeat: no-repeat; }
   .our_services__list {
     list-style: none;
@@ -266,13 +275,15 @@ body {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center; }
+    -webkit-box-align: start;
+    -ms-flex-align: start;
+    align-items: flex-start;
+    padding-left: 3em; }
   .our_services__item {
     display: block;
     position: relative;
     height: 100px;
+    max-width: 400px;
     width: calc(100%-$size);
     background-color: #ffffff;
     -webkit-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
@@ -291,19 +302,21 @@ body {
 .gallery {
   text-align: center;
   float: none;
-  padding-top: 90px;
-  padding-bottom: 120px;
+  padding-top: 5em;
+  padding-bottom: 7em;
   text-align: center; }
-  .gallery__text {
+  .gallery__heading {
     margin-bottom: 45px; }
-    .gallery__text h1 {
+  .gallery__title {
+    margin-bottom: 25px; }
+    .gallery__title h1 {
       font-size: 90px;
       margin: 0; }
-    .gallery__text p {
-      max-width: 50%;
-      margin: 0 auto;
-      font-size: 17px;
-      line-height: 1.5; }
+  .gallery__text p {
+    max-width: 50%;
+    margin: 0 auto;
+    font-size: 17px;
+    line-height: 1.5; }
   .gallery button {
     width: 100%;
     max-width: 200px;
@@ -320,7 +333,7 @@ body {
     .gallery button:hover {
       background-color: #749db6; }
   .gallery__img {
-    max-width: 100%;
+    width: 100%;
     height: 100%;
     -webkit-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
     box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
@@ -338,7 +351,7 @@ body {
   .gallery__link {
     display: block;
     font-size: 0;
-    padding-top: 72.8%;
+    padding-top: 71.8%;
     position: relative; }
 
 .section_5 {
@@ -401,3 +414,109 @@ body {
     cursor: pointer; }
     .subscribe button:hover {
       background-color: #b0d345; }
+
+.blog {
+  text-align: center;
+  float: none;
+  padding-top: 5em;
+  padding-bottom: 7em;
+  text-align: center;
+  color: #fff; }
+  .blog__heading {
+    margin-bottom: 45px; }
+  .blog__title {
+    margin-bottom: 25px; }
+    .blog__title h1 {
+      font-size: 90px;
+      text-transform: capitalize;
+      margin: 0; }
+  .blog__text p {
+    max-width: 50%;
+    margin: 0 auto;
+    font-size: 17px;
+    line-height: 1.5; }
+  .blog button {
+    width: 100%;
+    max-width: 200px;
+    min-height: 55px;
+    padding: 15px 0;
+    border: none;
+    -webkit-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
+    background-color: #f72b3b;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 20px;
+    cursor: pointer; }
+    .blog button:hover {
+      background-color: #f95c68; }
+  .blog__img {
+    width: 100%;
+    height: 100%;
+    -webkit-box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 5px 3px rgba(0, 0, 0, 0.1);
+    position: absolute;
+    top: 0;
+    left: 0;
+    -o-object-fit: cover;
+    object-fit: cover; }
+  .blog__news {
+    margin-bottom: 50px; }
+  .blog__link {
+    display: block;
+    font-size: 0;
+    padding-top: 83.8%;
+    position: relative; }
+    .blog__link::after {
+      content: "";
+      position: absolute;
+      bottom: 0px;
+      right: 0;
+      height: 50%;
+      width: 100%;
+      z-index: 3;
+      background-image: -webkit-gradient(linear, left bottom, left top, from(#262626), to(transparent));
+      background-image: linear-gradient(to top, #262626 0%, transparent 100%); }
+  .blog__post {
+    position: relative; }
+  .blog__post-day {
+    min-height: 60px;
+    min-width: 60px;
+    display: inline-block;
+    border-radius: 5px;
+    background-color: rgba(38, 38, 38, 0.502);
+    position: absolute;
+    left: 30px;
+    top: 30px;
+    z-index: 4;
+    font-size: 32px;
+    line-height: 25px;
+    font-weight: bold;
+    padding-top: 4px; }
+    .blog__post-day span > * {
+      text-align: center;
+      font-size: 21px;
+      font-weight: bold;
+      text-transform: uppercase; }
+  .blog__title-link {
+    font-size: 20px;
+    line-height: 25px;
+    color: #fff;
+    font-weight: bold;
+    text-decoration: none;
+    position: absolute;
+    left: 20px;
+    top: 205px;
+    z-index: 4;
+    text-align: left; }
+  .blog__info {
+    font-size: 13px;
+    line-height: 25px;
+    position: absolute;
+    left: 20px;
+    top: 268px;
+    z-index: 4;
+    text-align: left; }
+    .blog__info > * {
+      color: #fff;
+      text-decoration: none; }
