--- a/Lesson_exam/src/scss/_variables.scss
+++ b/Lesson_exam/src/scss/_variables.scss
@@ -27,6 +27,11 @@ $img-path: '../img/';
 
 $color: black;
 
+$borderHeight: 15px;
+
+
+
+
 // <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 // <i class="fab fa-facebook-f"></i>
 // <i class="fab fa-twitter"></i>
