--- a/Lesson_18_bootstrap2/src/scss/style.scss
+++ b/Lesson_18_bootstrap2/src/scss/style.scss
@@ -1,1 +1,6 @@
-@import "~bootstrap/scss/bootstrap";
+@import 'variables';
+@import 'mixins';
+@import 'common';
+@import 'first-screen';
+@import 'about';
+@import 'services';
