--- a/Lesson_18_bootstrap2/src/scss/_about.scss
+++ b/Lesson_18_bootstrap2/src/scss/_about.scss
@@ -15,8 +15,7 @@
 		&::after {
 			content: "";
 			@include overlay;
-			background-color: $about-overlay-color;
-			opacity: 0.9;			
+			background-color: rgba($blue-color, .97);				
 		}  		
 	}
 
