--- a/Lesson_18_bootstrap2/src/scss/_variables.scss
+++ b/Lesson_18_bootstrap2/src/scss/_variables.scss
@@ -10,6 +10,7 @@ $grey-color: #aaaaaa;
 $border-color: #ababab;
 $about-overlay-color: #205eba;
 $top-gradient-color: #021833;
+$contact-bg-color: #131313;
 
 $main-font: 'Raleway', sans-serif;
 
