--- a/Lesson_18_bootstrap2/src/scss/_first-screen.scss
+++ b/Lesson_18_bootstrap2/src/scss/_first-screen.scss
@@ -48,15 +48,12 @@
 				border-radius: 50%;
 				@include centered;
 				background: $white-color;
-
 			}
 		}
 
 		img {			
 			max-width: 100%; 
 		}
-
-
 	}
 
 	&__title {
@@ -85,14 +82,28 @@
 		margin-bottom: rem(30px);
 		font-size: rem(16px);
 	}
-
 }
 
 .navigation {
-
+	display: flex;	
+	justify-content: flex-end;
+	align-items: flex-start;
+	
 	&__list {
-		display: flex;
-		justify-content: space-between;
+		display: none;
+		flex-direction: column;
+		align-items: flex-end;
+
+		&.open {			
+			display: flex;
+		}
+		
+		@media all and (min-width: 992px) {
+			justify-content: space-between;
+			align-items: center;
+			flex-direction: row;
+			display: flex;
+		}
 	}
 
 	&__link {
