--- a/style.css
+++ b/style.css
@@ -4,24 +4,95 @@
 	margin: 0;
 }
 
-html, body {
+html {
+	position: relative;
 	width: 100%;
 	min-height: 100vh;
 }
 
-body {
-	font-size: 24px;
-	color: #333333;
-	background-color: #fdde7e; 
-	padding-top: 40px;
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	height: 11vh; 
 }
 
-.container {
-max-width: 1200px;
-height: 600px;
-margin: 20px auto; 
-text-align: center;
+body { 
+	width: 100%;
+	margin-bottom: 11vh;
+	font-size: 24px;
+	color: #000;	
+	background-color: #fff;
+}
 
+a {
+	display: block;
+	max-width: 100%;
+	text-decoration: none;
+}
+a:hover,
+a:focus {
+	text-decoration: none;
+}
+
+header {
+	background-color: #f4f3f3; 	
+	box-shadow: 0px -1px 0px 0px #e1e1e1 inset;
+	min-height: 100px;	
+	padding: 20px 0;
+}
+
+.header_link {
+	font-family: 'Arial';
+	color: rgba(0, 0, 0, 1);
+	font-size: 31px;
+	line-height: 31px;
+	text-decoration: none;
+	outline: none;
+	display: block;
+	max-width: 100%;
+	text-align: center;
+}
+
+.header__name {
+	margin-bottom: 15px;
+}
+
+.navigation__list {
+	width: 100%;
+	display: flex;
+	justify-content: space-between;
+	margin: 0;
+	padding: 0;
+	list-style: none;
+}
+
+.navigation__item:not(:last-child) {
+	margin-right: 10px; 
+}
+
+.navigation__link {
+	font-family: 'Verdana';
+	font-size: 12px;
+	line-height: 12px;
+	color: #a89e9e;
+	display: block;
+	text-transform: uppercase;
+}
+
+.header_link:hover,
+.header_link:focus,
+.navigation__link:hover,
+.navigation__link:focus {
+	color: rgba(0, 0, 0, 1);
+}
+
+.section-links {
+	max-width: 1200px;
+	max-height: 800px;
+	height: 100%;
+	margin: 20px auto; 
+	text-align: center;
 }
 
 .list {
@@ -51,5 +122,22 @@ text-align: center;
 }
 
 .link span {
-text-transform: capitalize;
+	text-transform: capitalize;
 }
+
+
+.footer {
+	background-color: #353535;
+	padding-bottom: 10px;
+}
+
+.social-icons-wrapper {
+	
+	min-height: 40px;
+	height: 100%;
+}
+.social-icon-box > a {
+	font-size: 31px;
+	color: #a8a9c2;
+}
+
