--- a/Cahee_bs/src/scss/_page.scss
+++ b/Cahee_bs/src/scss/_page.scss
@@ -613,8 +613,13 @@ a:hover {
 			text-decoration: none;
 			font-size: 25px;
 			color: #b9b9b9;
-			font-family: "Pacifico";		
-		}
+			font-family: "Pacifico";	
+
+			&:hover {
+				text-decoration: none;
+				color: #000;
+			}			
+		}		
 	}
 
 	&__author { 
