--- a/Lesson_18_bootstrap2/src/scss/_first-screen.scss
+++ b/Lesson_18_bootstrap2/src/scss/_first-screen.scss
@@ -1,14 +1,20 @@
 .first-screen {
-	$paddingTop: 80px;
 	position: relative;
-	background-size: cover;
 	background-image:
-	linear-gradient(to top, $dark-color 0%, rgba($black-color, 1) 6%, rgba($top-gradient-color, .9) 100%), 
+	linear-gradient(to top, $dark-color 0%, rgba($top-gradient-color, .9) 100%), 
 	url($img-path + "header-bg.jpg");
+
 	background-position: 0 0;
 	background-repeat: no-repeat;
+	background-size: cover;
 	min-height: 100vh;
-	padding-top: $paddingTop;
+	z-index: 2;
+
+	padding-top: 40px;
+	$paddingTop: 80px;
+	@include min992 {
+		padding-top: $paddingTop;
+	}
 
 	&__container {
 		position: relative;
@@ -17,104 +23,136 @@
 		flex-direction: column;
 		justify-content: space-between;
 		min-height: calc(100vh - #{$paddingTop});
-	}	
+	}
 
-	&__image {	
-
-		.fa-play {
-			@include centered;	
-			z-index: 1;
-			color: $pink-color;
-			font-size: rem(24px);
-		}
+	&__image {
+		
 
 		&-link {
 			position: relative;
 			display: inline-block;
+			max-width: 70%;			
 
-			max-width: 70%;
 			@media screen and (min-width: 1367px) {
-				max-width: 100%; 
+				max-width: 100%;
 			}
-			
+
+			.fa-play {
+				@include centered;
+				z-index: 1;
+				color: $pink-color;
+				font-size: rem(24px)
+			}
+
 			&::after {
 				$size: 90px;
-				content: "";
-				display: block;
-				position: absolute;
+				content: '';
+				display: block;				
 				width: $size;
 				height: $size;
 				border: 10px solid $border-color;
 				border-radius: 50%;
 				@include centered;
-				background: $white-color;
+				background-color: $white-color;
 			}
 		}
 
-		img {			
-			max-width: 100%; 
-		}
+		img {
+			max-width: 100%;
+		}		
+		
 	}
 
 	&__title {
 		$font-size: rem(48px);
 		margin-bottom: rem(30px);
 
-		> * {
+		& > * {
 			text-transform: uppercase;
 			font-size: $font-size;
 			letter-spacing: 2px;
 			font-weight: 300;
-			margin: 0;
+			margin-bottom: 0;
 		}
 
 		&::before {
 			@include decor($font-size);
 		}
+
 	}
 
 	&__text {
 		font-weight: 200;
 		max-width: 90%;
-		color: $light-color;
 		line-height: 2;
+		color: $light-color;
 		letter-spacing: 1px;
 		margin-bottom: rem(30px);
-		font-size: rem(16px);
 	}
-}
 
-.navigation {
-	display: flex;	
-	justify-content: flex-end;
-	align-items: flex-start;
-	
-	&__list {
-		display: none;
-		flex-direction: column;
-		align-items: flex-end;
+	.navigation {
+		width: 100%;
+		display: flex;
+		align-items: center;
+		justify-content: flex-end;
+		padding-right: 0;
+		padding-left: 0;
 
-		&.open {			
+		&__list {
 			display: flex;
-		}
-		
-		@media all and (min-width: 992px) {
-			justify-content: space-between;
 			align-items: center;
-			flex-direction: row;
-			display: flex;
+			justify-content: space-between;
+			flex: 100%;
+
+
+			&.open {
+				display: flex;
+
+				.navigation__item {
+					margin-bottom: .5rem;
+				}
+			}
+		}
+
+		&__item {
+			&.active {
+				.navigation__link {
+					color: $pink-color;	
+				}
+			}
+		}
+
+		&__link {
+			text-transform: uppercase;
+			font-weight: bold;
+			font-size: rem(14px);
+
+			&:hover {
+				color: $pink-color;
+			}
 		}
 	}
 
-	&__link {
-		text-transform: uppercase;
-		font-weight: bold;
-		font-size: rem(14px);
 
-		&:hover {
-			color: $pink-color;
+	.navbar-collapse {
+		position: absolute;
+		top: 0;
+		transform: translateY(25%);
+		// opacity: 0;
+
+		&.show {
+			& > * {
+				opacity: 1;
+			}
 		}
 	}
 }
 
 
+// .fixed {
+// 	position: fixed;
+// 	width: 100%;
+// 	left: 0;
+// 	top: 0;
+// 	z-index: 1500000;
+// }
