exam_2_footer_add

--- a/exam2/src/scss/_mixins.scss
+++ b/exam2/src/scss/_mixins.scss
@@ -101,6 +101,12 @@
 	}
 }
 
+@mixin max768 {
+	@media all and (max-width: 768px) {
+		@content;
+	}
+}
+
 @mixin min576 {
 	@media all and (min-width: 576px) {
 		@content;
