--- a/exam2/src/scss/_team.scss
+++ b/exam2/src/scss/_team.scss
@@ -1,5 +1,4 @@
 .team {
-	
 
 	.container {
 		display: flex;
@@ -8,15 +7,7 @@
 		min-height: 820px;
 		padding-top: 50px;
 		padding-bottom: 100px;
-
-		&:first-child {
-			// flex-grow: 1;
-		}
 	}
-
-	// &__slider {
-	// 	margin-bottom: 0;
-	// }
 
 	.col-4 {
 		position: relative;
@@ -30,10 +21,18 @@
 		margin-bottom: 25px;
 	}
 
+	.col-sm-12 {
+		@include  max768 {
+			padding-left: 40px;
+			padding-right: 40px;
+		}	
+	}
+
 	&__slide {
 		margin-top: 124px;
 		background: $white-color;
 		min-height: 283px;
+		
 		display: flex;
 		flex-direction: column;
 		justify-content: flex-end;
@@ -75,10 +74,6 @@
 
 		@include centered;
 		max-width: 255px;
-		// height: 100%;
-		// top: 0;
-		// left: 16%;
-		// position: absolute;
 		border: 12px solid $bg-color;
 		border-radius: 50%;
 	}
@@ -86,5 +81,5 @@
 
 
 .slick-arrow {
-color: $grey-color;
+	color: $grey-color;
 }
