--- a/exam2/src/scss/slick-theme.scss
+++ b/exam2/src/scss/slick-theme.scss
@@ -1,72 +1,12 @@
 @charset "UTF-8";
+@import 'variables';
+@import 'mixins';
 
-// Default Variables
-
-// Slick icon entity codes outputs the following
-// "\2190" outputs ascii character "←"
-// "\2192" outputs ascii character "→"
-// "\2022" outputs ascii character "•"
-
-$slick-font-path: "./fonts/" !default;
 $slick-font-family: "slick" !default;
 $slick-loader-path: "./" !default;
-$slick-arrow-color: #665f60 !default;
-$slick-dot-color: black !default;
-$slick-dot-color-active: $slick-dot-color !default;
-$slick-prev-character: "\2190" !default;
-$slick-next-character: "\2192" !default;
-$slick-dot-character: "\2022" !default;
-$slick-dot-size: 6px !default;
 $slick-opacity-default: 0.75 !default;
 $slick-opacity-on-hover: 1 !default;
 $slick-opacity-not-active: 0.25 !default;
-
-
-
-
-
-
-
-
-
-@function slick-image-url($url) {
-    @if function-exists(image-url) {
-        @return image-url($url);
-    }
-    @else {
-        @return url($slick-loader-path + $url);
-    }
-}
-
-@function slick-font-url($url) {
-    @if function-exists(font-url) {
-        @return font-url($url);
-    }
-    @else {
-        @return url($slick-font-path + $url);
-    }
-}
-
-/* Slider */
-
-.slick-list {
-    .slick-loading & {
-        background: #fff slick-image-url("ajax-loader.gif") center center no-repeat;
-    }
-}
-
-/* Icons */
-@if $slick-font-family == "slick" {
-    @font-face {
-        font-family: "slick";
-        src: slick-font-url("slick.eot");
-        src: slick-font-url("slick.eot?#iefix") format("embedded-opentype"), slick-font-url("slick.woff") format("woff"), slick-font-url("slick.ttf") format("truetype"), slick-font-url("slick.svg#slick") format("svg");
-        font-weight: normal;
-        font-style: normal;
-    }
-}
-
-/* Arrows */
 
 .slick-prev,
 .slick-next {
@@ -101,7 +41,7 @@ $slick-opacity-not-active: 0.25 !default;
         font-family: $slick-font-family;
         font-size: 20px;
         line-height: 1;
-        color: $slick-arrow-color;
+        color: $grey-color;
         opacity: $slick-opacity-default;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
@@ -109,114 +49,55 @@ $slick-opacity-not-active: 0.25 !default;
 }
 
 .slick-prev {
-    left: -25px;
+    left: -5px;
     [dir="rtl"] & {
         left: auto;
-        right: -25px;
+        right: -5px;
     }
     &:before {
         content: "";
-    display: block;
-    width: 30px;
-    height: 30px;
-    border: 2px solid transparent;
-    border-left-color: #575d66;
-    border-top-color: #575d66;
-    position: absolute;
-    z-index: 0;
-    top: 200%;
-    right: 30px;
-    transform: rotate(-45deg);
-    cursor: pointer;
+        display: block;
+        width: 30px;
+        height: 30px;
+        border: 2px solid transparent;
+        border-left-color: #575d66;
+        border-top-color: #575d66;
+        position: absolute;
+        z-index: 0;
+        top: 200%;
+        left: 15px;
+        transform: rotate(-45deg);
+        cursor: pointer;
+
+        @include min576 {  
+            left: -5px;      
+        }
     }
 }
 
 .slick-next {
-    right: -25px;
+    right: -5px;
     [dir="rtl"] & {
-        left: -25px;
+        left: -5px;
         right: auto;
     }
     &:before {
         content: "";
-    display: block;
-    width: 30px;
-    height: 30px;
-    border: 2px solid transparent;
-    border-right-color: #575d66;
-    border-bottom-color: #575d66;
-    position: absolute;
-    z-index: 0;
-    top: 200%;
-    right: -30px;
-    transform: rotate(-45deg);
-    cursor: pointer;
-    }
-}
-
-
-
-/* Dots */
-
-// .slick-dotted.slick-slider {
-//     margin-bottom: 30px;
-// }
-
-.slick-dots {
-    position: absolute;
-    bottom: -25px;
-    list-style: none;
-    display: block;
-    text-align: center;
-    padding: 0;
-    margin: 0;
-    width: 100%;
-    li {
-        position: relative;
-        display: inline-block;
-        height: 20px;
-        width: 20px;
-        margin: 0 5px;
-        padding: 0;
+        display: block;
+        width: 30px;
+        height: 30px;
+        border: 2px solid transparent;
+        border-right-color: #575d66;
+        border-bottom-color: #575d66;
+        position: absolute;
+        z-index: 0;
+        top: 200%;
+        right: 15px;
+        transform: rotate(-45deg);
         cursor: pointer;
-        button {
-            border: 0;
-            background: transparent;
-            display: block;
-            height: 20px;
-            width: 20px;
-            outline: none;
-            line-height: 0px;
-            font-size: 0px;
-            color: transparent;
-            padding: 5px;
-            cursor: pointer;
-            &:hover, &:focus {
-                outline: none;
-                &:before {
-                    opacity: $slick-opacity-on-hover;
-                }
-            }
-            &:before {
-                position: absolute;
-                top: 0;
-                left: 0;
-                content: $slick-dot-character;
-                width: 20px;
-                height: 20px;
-                font-family: $slick-font-family;
-                font-size: $slick-dot-size;
-                line-height: 20px;
-                text-align: center;
-                color: $slick-dot-color;
-                opacity: $slick-opacity-not-active;
-                -webkit-font-smoothing: antialiased;
-                -moz-osx-font-smoothing: grayscale;
-            }
-        }
-        &.slick-active button:before {
-            color: $slick-dot-color-active;
-            opacity: $slick-opacity-default;
+
+        @include min576 {  
+            right: -5px;
         }
     }
 }
