--- a/exam2/src/scss/_contact.scss
+++ b/exam2/src/scss/_contact.scss
@@ -26,8 +26,6 @@
 		background-color: rgba(159, 154, 207, 0.4);
 	}
 
-
-
 	&__icon {
 		margin-bottom: 18px;
 	}
@@ -65,8 +63,6 @@
 	}
 
 	&__username {
-
-
 		flex-direction: column;
 		display: flex; 
 		justify-content: space-between; 
@@ -112,7 +108,6 @@
 		max-width: 414px;	
 		padding-top: 5px;
 		padding-left: 25px;
-
 	}
 
 	textarea {
@@ -137,6 +132,7 @@
 		line-height: 26px;
 		font-family: $heading-font;
 		align-self: center;
+		transition: all .4s ease;
 
 		&:hover {
 			background-color: darken( $violet-color,2%);
@@ -145,7 +141,6 @@
 		&:active {
 			box-shadow: none;
 			transform: translateY(5px);
-			transition: transform .4s ease;
 		}
 	}
 }
