--- a/exam2/src/scss/_footer.scss
+++ b/exam2/src/scss/_footer.scss
@@ -21,13 +21,14 @@
 			justify-content: flex-end;		
 			align-items: center;			
 		}
-
 	}
 
 	&__copyright {
+		font-size: 16px;
 		@include  center;
 
 		@include min768 {
+			font-size: 18px;
 			display: flex;
 			justify-content: flex-start;		
 			align-items: center;		
