exam2_correction_nav_menu-list

--- a/exam2/src/scss/_footer.scss
+++ b/exam2/src/scss/_footer.scss
@@ -2,7 +2,7 @@
 	background: $violet-color;
 	height: 130px;
 	display: flex;
-	align-items: space-around;
+	justify-content: space-around;
 
 	@include min768 {
 		height: 185px;
@@ -15,7 +15,6 @@
 
 	&__contacts {
 		@include  center;
-
 		@include min768 {
 			display: flex;
 			justify-content: flex-end;		
