--- a/exam2/src/scss/_menu.scss
+++ b/exam2/src/scss/_menu.scss
@@ -77,6 +77,10 @@
     font-weight: 500;
     text-transform: uppercase;
 
+    &:hover {
+        color: $grey-btn-color;
+    } 
+
     @include min992 {        
         font-size: 24px;
     }
