--- a/exam2/src/scss/_first-screen.scss
+++ b/exam2/src/scss/_first-screen.scss
@@ -42,9 +42,14 @@
 	}
 
 	&__text {
-		font-size: 24px;
+		font-size: 20px;
 		font-style: italic;
 		line-height: 35px;
+
+
+		@include min576 {        
+			font-size: 24px;
+		}
 
 		@include min768 {        
 			font-size: 28px;
